syntax = "proto3";

// Enum for inventory status
enum InventoryStatus {
    IN_STOCK = 0;
    OUT_OF_STOCK = 1;
    RESERVED = 2;
}

// Message for inventory item
message InventoryItem {
    int32 id = 1;
    int32 product_id = 2;
    int32 quantity = 3;
    InventoryStatus status = 4;
}
